# ephemerkey-control

./: .gitignore  DESIGN.md  LICENSE  NOTICE  README.md
docs/: serial-protocol.md
scripts/: ekenv.mjs  serial-emu-e2e.mjs  smoke.mjs
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_set_blobs.sql
server/src/: auth.rs  db.rs  error.rs  main.rs  telemetry.rs
server/src/api/: courier.rs  device.rs  mod.rs  sets.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  state.tsx  styles.css
web/src/lib/: api.ts  backup.ts  config.ts  cose.ts  keys.ts  otpauth.ts  qr.ts  serial.ts
web/src/views/: AddDevice.tsx  Authenticator.tsx  Backup.tsx  ConfigEditor.tsx  Console.tsx  DeviceDetail.tsx  Devices.tsx  Events.tsx  Landing.tsx  Push.tsx  QrScanner.tsx  RecoveryCard.tsx  Unlock.tsx  Welcome.tsx  ZoneMap.tsx
web/tests/: console.spec.ts  mock-serial.ts  push.spec.ts
